2012-09-01  6.7.9-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-3, SVN revision 9202.

2012-08-28  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * Support -channel sync option for -equalize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21746).
  * Don't remove color profile when setting the image colorspace (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21747).
  * Recognize ICO format in URL (e.g. http://www.google.com/favicon.ico).
  * Don't define HAVE_BOOLEAN for JPEG under MinGW (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=14071).

2012-08-26  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-2, SVN revision 9120.

2012-08-25  6.7.9-2 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug in Q32 builds that erroneously read grayscale 16-bit PNGs
    as PseudoColor.

2012-08-24  6.7.9-2 Cristy  <quetzlzacatenango@image...>
  * Support -channel option for -solarize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21738).

2012-08-23  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-1, SVN revision 9095.

2012-08-22  6.7.9-1 Glenn Randers-Pehrson <glennrp@image...>
  * The gAMA chunk with gamma==1.0 was ignored while deciding whether to set
    the image colorspace to GRAY when reading grayscale PNG images.

2012-08-16  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * Adjust scaling for Luv colorspace conversion (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21664).
  * Copy alpha channel of the -median option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21694).
  * Don't add matte channel for -coalesce if input images don't have one.
  * Prevent memory leak in ImageToBlob() if image write fails.
  * In rare cases, label would not auto-size properly (reference